# kapture-localization

./: CMakeLists.txt  Dockerfile  LICENSE  NOTICE  README.adoc  requirements.txt  setup.py
doc/: benchmark.adoc  benchmark_results.adoc  benchmark_results_aachen.adoc  benchmark_results_baidu.adoc  benchmark_results_gangnam.adoc  benchmark_results_robotcar.adoc  docker.adoc  installation.adoc  tutorial.adoc
kapture_localization/: __init__.py  evaluation.py
pipeline/: README.adoc  kapture_hloc_pipeline_from_kapture_dataset.py  kapture_pipeline_colmap_vocab_tree.py  kapture_pipeline_image_retrieval_benchmark.py  kapture_pipeline_image_retrieval_benchmark_from_pairsfile.py  kapture_pipeline_localize.py  kapture_pipeline_mapping.py  pipeline_import_paths.py
tests/: test_evaluation.py
tools/: kapture_colmap_build_map.py  kapture_colmap_build_sift_map.py  kapture_colmap_localize.py  kapture_colmap_localize_localsfm.py  kapture_colmap_localize_sift.py  kapture_compute_distance_pairs.py  kapture_compute_image_pairs.py  kapture_compute_matches.py  kapture_compute_observations_pairs.py  kapture_compute_sequence_pairs.py  kapture_create_3D_model_from_depth.py  kapture_create_kapture_proxy.py  kapture_evaluate.py  kapture_image_retrieval_late_fusion.py  kapture_pairsfile_fusion.py  kapture_pose_approximation.py  kapture_pose_approximation_from_pairsfile.py  kapture_pycolmap_localize.py  kapture_pycolmap_localsfm.py  kapture_pycolmap_rig_localize.py  kapture_pycolmap_rig_localsfm.py  kapture_pyransaclib_localize.py  kapture_pyransaclib_localsfm.py  kapture_run_colmap_gv.py  (+3 more)
(+51 files in other folders)
